
syntax = "proto3";

package auth;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
message user {
    string id = 1;
    string email = 2;
    string password = 3;
    string fullname = 4;
    string avatar = 5;
    string roleId = 6;
    bool emailVerified = 7;
}




message VoidRequest {}

message CurrentUserReply {
    string userId = 1;
    string sessionId = 2;
    string fullname = 3;
    string email = 4;
    string roleId = 5;
    string avatar = 6;
    bool emailVerified = 7;
        string accessToken = 8;
}

message HelloMessageReply {
    string hello = 1;
}

service authService {
    rpc currentUser(VoidRequest) returns (CurrentUserReply);
    rpc helloMessage(VoidRequest) returns (HelloMessageReply);
}